--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "github-markdown-css": "^2.4.1",
+    "highlight.js": "^9.11.0",
     "keycode": "^2.1.8",
     "marked": "^0.3.6",
     "muse-ui": "^2.0.0-rc.5",
